1999-11-22  David Byers  <davby@ida.liu.se>

	* completing-read.el (lyskom-complete-string): Use character space
	and not ASCII space.

	* lyskom-rest.el (lyskom-modeline-keymap): Go to unread session on
	mouse up, not mouse down since mouse up event is bound to bad
	things in XEmacs.

	* edit-text.el (lyskom-edit-get-commented): Rewrote as blocking.

	* option-edit.el (lyskom-custom-variables): Added last-recipient
	option to kom-default-message-recipient.

	* vars.el.in (lyskom-last-message-recipient): New variable.

	* commands2.el (kom-send-message): Added last-recipient option to
	kom-default-message-recipients..

1999-11-21  David Byers  <davby@ida.liu.se>

	* edit-text.el (lyskom-edit-insert-miscs): Use lyskom-princ to
	insert subject.

	* slow.el (kom-expand-slow-command): Use lyskom-string=

	* flags.el (lyskom-read-options-eval): Use lyskom-string=

	* edit-text.el (kom-ispell-message): Use lyskom-string=
	(lyskom-send-enriched): Same here.

	* completing-read.el (lyskom-completing-member): Same here.

	* commands1.el (kom-change-password): Use lyskom-string=
	(lyskom-return-username): Same here.

	* utilities.el (lyskom-string=): New function.
	(lyskom-string-assoc): Use it.

	* language.el (lyskom-language-coding): New function.
	(lyskom-define-language): Added argument CODING.

	* lyskom-rest.el (lyskom-update-prompt): Set rear-nonsticky on
	prompt text properties.

	* view-text.el (lyskom-format-text-footer): Use string-width, not
	length to compute width of author name, width of text number,
	flags.

	* option-edit.el (lyskom-widget-name-value-create): Use
	string-width to compute padding.
	(lyskom-widget-command-value-create): Ditto.
	(lyskom-widget-kbd-macro-value-create): Same here.

	* lyskom-buttons.el (lyskom-keyboard-menu): USe string-width to
	get the width of a string.

	* completing-read.el (lyskom-read-session-resolve-ambiguity): Use
	string-width to get width of a string.
